CHANGELOG 25 January 2008 Scott Cytacki
1. Consolidated most places where the ServiceInfo object was turned into a set of dns records.  
  And most places where the localHost (HostInfo) object was turned into dns records.
  There is still one place that is duplicated (JmDNS.Responder) because it adds the dns records 
  to a list first, removes known answers, and finally adds them to DNSOutgoing.  

CHANGELOG 17 January 2008 Scott Cytacki
1. Added eclipse project files.  Forced the eclipse project to use java 1.4

2. Changed the eclipse project to store built files in eclipse-lib because lib was already
   being used.

3. Added eclipse code formating configuration files. They should match follow the turbine 
coding standards which have been used in this project: http://turbine.apache.org/common/code-standards.html
Also this includes a minor formating clean up of JmDNS class.

4. Changed Logger.getLogger parameter to use class.getName instead of class.toString. This is because
 class.toString returns for example "class javax.jmdns.JmDNS" while class.getName returns "javax.jmdns.JmDNS".
 The "class " messes up the logging hierarchical structure.  This javadoc specifices the string should be 
 dot separated: http://java.sun.com/j2se/1.5.0/docs/api/java/util/logging/Logger.html#getLogger(java.lang.String).
 Also this post to the mailing list talks about this issue:
 http://sourceforge.net/mailarchive/forum.php?thread_name=1196195175.2703.4.camel%40moya.kivasystems.com&forum_name=jmdns-discuss
 In that case getCanonicalName was used but that is only in Java 1.5 and basically does the same thing
 for normal classes. 

 
CHANGELOG 16 July 2005  Rick Blair

1. Added Apache License Version 2.0

2. Added shutdown fix as identifed by Scott Lewis

3. Added copyright notice.

4. General code cleanup.


CHANGELOG  30 November 2004 rawcoder

1. IPv6 support

   - RFE 890432: IPv6 support implemented

2. Logging

   - Logging is done using the Java Logger API now

3. Bug fixes
